k8s/kubernetes-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
  nginx.ingress.kubernetes.io/auth-type: basic
  nginx.ingress.kubernetes.io/auth-secret: dashboard-basic-auth
  nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
  nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"  # Force NGINX to talk HTTPS to service (dashboard serves TLS on 8443)
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dashboard.home.lan
      secretName: dashboard-tls
  rules:
    - host: dashboard.home.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  name: https  # or: number: 443
